hphp/hack/test/typecheck/property_visibility_override_bad.php.exp
File "property_visibility_override_bad.php", line 4, characters 33-35:
This member visibility is: `private` (Typing[4113])
  File "property_visibility_override_bad.php", line 3, characters 20-22:
  `public` was expected
