hphp/hack/test/typecheck/property_visibility_override_bad.php
<?hh

class Foo { public int $foo = 42; }
class Bar extends Foo { private int $foo = 13; }
